# chatbot_with_langchain

./: .gitignore
app/: .gitignore  docker-compose.yml  main.py  pyproject.toml
app/api/: chat.py
app/llm/: agent.py
app/services/: chat_service.py
backend/: .env  .env.example  Dockerfile  pyproject.toml
backend/app/: README.md  docker-compose.yml  main.py  pyproject.toml
backend/app/api/: chat.py
backend/app/api/v1/: chat.py  router.py
backend/app/core/: config.py  db.py  db_models.py
backend/app/llm/: agent.py  graph.py  guard.py  llm_chat.txt  state.py
backend/app/llm/providers/: google_client.py
backend/app/schemas/: chat.py
backend/app/services/: chat_service.py
frontend/: streamlit.py
frontend-web/: README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
frontend-web/src/: main.tsx  runtime.ts  styles.css  ui.tsx
