[project]
name = "backend"
version = "0.1.0"
description = "Building langchain based application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain==1.2.10",
    "fastapi==0.129.0",
    "uvicorn[standard]==0.35.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.11.0",
    "langchain-google-genai==2.1.12"
]
